--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "react-google-drive",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
