--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,3 @@
-//{
-//  "compilerOptions": {
-//    "outDir": "dist",
-//    "module": "ESNext",
-//    "target": "ES6",
-//    "declaration": true,
-//    "declarationDir": "dist",
-//    "jsx": "react-jsx",
-//    "moduleResolution": "node",
-//    "esModuleInterop": true
-//
-//
-////    "target": "ES2017",
-//    //    "lib": [
-//    //      "dom",
-//    //      "dom.iterable",
-//    //      "esnext"
-//    //    ],
-//    //    "allowJs": true,
-//    //    "skipLibCheck": true,
-//    //    "strict": true,
-//    //    "noEmit": true,
-//    //    "esModuleInterop": true,
-//    //    "module": "esnext",
-//    //    "moduleResolution": "bundler",
-//    //    "resolveJsonModule": true,
-//    //    "isolatedModules": true,
-//    //    "jsx": "preserve",
-//    //    "incremental": true
-//  },
-//  "include": [
-//    "**/*.ts",
-//    "**/*.tsx",
-//    "**/*"
-//  ],
-//  "exclude": [
-//    "node_modules"
-//  ]
-//}
-
 {
   "compilerOptions": {
     "outDir": "dist",
@@ -45,11 +5,17 @@
     "module": "ESNext",
     "target": "ES6",
     "declaration": true,
-    "declarationDir": "dist/types",
+    "declarationDir": "dist",
     "jsx": "react-jsx",
     "moduleResolution": "node",
     "esModuleInterop": true
   },
-  "include": ["src"],
-  "exclude": ["dist", "node_modules"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules",
+    "src/App.tsx"
+  ]
 }
