--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "react-google-drive",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react": "^19.0.0"
   },
   "scripts": {
     "build": "tsc && rollup -c",
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
+    "react-dom": "^19.0.0",
+    "react-scripts": "5.0.1",
     "@types/react-dom": "^19.0.3",
     "cra-template-typescript": "1.2.0",
     "rollup": "^4.34.0",
